--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,9 @@
+[package]
+name = gperftools
+url = https://github.com/gperftools/gperftools/archive/gperftools-2.6.1.tar.gz
+archives = 
+giturl = https://github.com/gperftools/gperftools.git
+
 [autospec]
 # build 32 bit libraries
 32bit = false
