--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gperftools
-url = https://github.com/gperftools/gperftools/archive/gperftools-2.6.1.tar.gz
+url = https://github.com/gperftools/gperftools/releases/download/gperftools-2.6.3/gperftools-2.6.3.tar.gz
 archives = 
 giturl = https://github.com/gperftools/gperftools.git
 
@@ -11,6 +11,8 @@ giturl = https://github.com/gperftools/gperftools.git
 allow_test_failures = true
 # unset %build ld_as_needed variable
 asneeded = false
+# this package is trusted enough to automatically update (used by other tools)
+autoupdate = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
