gperftools: Autospec creation for update from version 2.7 to version 2.10
Aliaksei Kandratsenka (1):
      Upgrade MSVC projects to MSVC2015

Aliaksey Kandratsenka (60):
      build with c++11 or later
      provide constexpr constructor for Sampler
      Format and fix out of bound access in CpuProfilerSwitch
      Fix incompatible aliasing warnings
      Use standard-conforming alignof in debugallocation.cc
      Avoid static initialization of pprof path for symbolization.
      Add flag to disable installing unmaintained & deprecated pprof.
      Drop de-duplication of heap sample (aka heapz) entries.
      Add comment about gperftools 2.8 not deduplicating heapz samples.
      Drop not very portable and not very useful unwind benchmark.
      don't try to mark rsp as clobbered in linux syscall support
      never test and always default HAVE_MMAP to on
      amputate span events history
      drop page heap lock when returning memory back to kernel
      bumped version to 2.8rc
      don't assume HAVE_MMAP on mingw builds
      chmod -x Makefile.am gperftools.sln
      fix linking of page_heap_test on windows
      prevent inlining in heap-checker unittest
      liberate gperftools tests from relying on -fno-builtin-XXX flags
      bumped version to 2.8
      don't test sbrk hook if we're on linux and don't have __sbrk
      Revert "drop page heap lock when returning memory back to kernel"
      add note that cmake build is preliminary
      bump version to 2.8.1
      amputate checking for inline keyword support
      amputate checking for conflict-signal.h
      amputate checking for __int64
      use standard way to print size_t-sized ints
      don't bother checking for stl namespace and use std
      unbreak cmake check for TLS support
      don't check for useless __builtin_stack_pointer
      amputate unused SleepForMilliseconds from sysinfo.{h,cc}
      don't check for unused uname symbol
      don't check for snprintf
      amputate unused dynamic annot

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = gperftools
-url = https://github.com/gperftools/gperftools/releases/download/gperftools-2.7/gperftools-2.7.tar.gz
+url = https://github.com/gperftools/gperftools/releases/download/gperftools-2.10/gperftools-2.10.tar.gz
 archives = 
 giturl = https://github.com/gperftools/gperftools.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
